Fix Navbar z-index problem

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -14,6 +14,7 @@
   background-image: linear-gradient(160deg, $light_blue 0%, $light_teal 100%);
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
+  z-index: 100;
 
   .title {
     font-size: 1.5rem;
